[gd_scene load_steps=10 format=3 uid="uid://dcctlg17v5oq0"]

[ext_resource type="Texture2D" uid="uid://bhkn70appytmn" path="res://assets/Actor/Enemy/Sentry.png" id="1"]
[ext_resource type="Script" path="res://src/Actor/Enemy/Sentry.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://kuobfcjv8sx6" path="res://assets/SFX/Placeholder/snd_em_fire.ogg" id="3"]
[ext_resource type="AudioStream" uid="uid://cpbrsidi03i20" path="res://assets/SFX/Placeholder/snd_enemy_hurt.ogg" id="4"]

[sub_resource type="RectangleShape2D" id="1"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="2"]
size = Vector2(384, 384)

[sub_resource type="Animation" id="3"]
resource_name = "ReloadLeft"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [8, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="4"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:flip_h")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_egxmn"]
_data = {
"ReloadLeft": SubResource("3"),
"ShootLeft": SubResource("4")
}

[node name="Sentry" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 522
script = ExtResource("2")
editor_hidden = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("1")

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
modulate = Color(0.992157, 0.992157, 0.992157, 0.156863)
shape = SubResource("2")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("1")
hframes = 8
vframes = 2

[node name="PosHurt" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4")
bus = &"SFX"

[node name="PosFire" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3")
bus = &"SFX"

[node name="FireCooldown" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_egxmn")
}

[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
